# pangolin

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PKGBUILD  README.md
apps/: CMakeLists.txt  demo.cpp  game.cpp
cmake/: CCache.cmake  FindSphinx.cmake  UpdateSubmodules.cmake  pangolinConfig.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  math.rst
docs/: CMakeLists.txt
include/game/: camera.hpp  mesh.hpp  model.hpp  shader.hpp
include/pangolin/: game-object.hpp  game.hpp  mesh.hpp  model.hpp  particle-generator.hpp  post-processor.hpp  profile.hpp  resource-manager.hpp  shader.hpp  sprite-renderer.hpp  text-renderer.hpp  texture.hpp
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/pangolin/: CMakeLists.txt
libs/pangolin/glad/: glad.c
libs/pangolin/include/pangolin/: camera.hpp  game-object.hpp  mesh.hpp  model.hpp  particle-generator.hpp  post-processor.hpp  resource-manager.hpp  shader.hpp  sprite-renderer.hpp  text-renderer.hpp  texture.hpp
libs/pangolin/src/: camera.cpp  game-object.cpp  mesh.cpp  model.cpp  particle-generator.cpp  post-processor.cpp  resource-manager.cpp  shader.cpp  sprite-renderer.cpp  text-renderer.cpp  texture.cpp
libs/pangolin/tests/: testresources.cpp
libs/pgl-core/: CMakeLists.txt
libs/pgl-core/include/pgl-core/: camera.hpp  game-object.hpp  mesh.hpp  model.hpp  particle-generator.hpp  post-processor.hpp  resource-manager.hpp  shader.hpp  sprite-renderer.hpp  text-renderer.hpp  texture.hpp
libs/pgl-core/src/: CMakeLists.txt  camera.cpp  game-object.cpp  mesh.cpp  model.cpp  particle-generator.cpp  post-processor.cpp  resource-manager.cpp  shader.cpp  sprite-renderer.cpp  text-renderer.cpp  texture.cpp
libs/pgl-core/tests/: CMakeLists.txt
libs/pgl-gui/: CMakeLists.txt
libs/pgl-gui/include/pgl-gui/: glfw-window.hpp  window.hpp
libs/pgl-gui/src/: CMakeLists.txt  glfw-window.cpp  window.cpp
libs/pgl-image/: CMakeLists.txt
libs/pgl-image/include/pgl-image/: image-loader.hpp
libs/pgl-image/src/: image-loader.cpp  image-utils.cpp  image-utils.hpp  png.cpp  png.hpp  stream-utils.cpp  stream-utils.hpp  stream_utils.hpp
libs/pgl-image/tests/: CMakeLists.txt  test-image.cpp  test-png.cpp  test-stream.cpp
libs/pgl-image/tests/src/: test-image.cpp
libs/pgl-math/: CMakeLists.txt
libs/pgl-math/include/pgl-math/: algebraic-vector.hpp  algebric-vector.hpp  algorithms.hpp  base-vector.hpp  matrix.hpp  printer.hpp  quaternion.hpp  utils.hpp  vector.hpp
libs/pgl-math/include/pgl-math/impl/: algebraic-vector.hpp  algebric-vector.hpp  algorithms.hpp  base-vector.hpp  matrix.hpp  vector.hpp
libs/pgl-math/src/: vector.cpp
libs/pgl-math/tests/: CMakeLists.txt  algebraic-vector.cpp  algebric-vector.cpp  base-vector.cpp  test-algebric-vector.cpp  test-base-vector.cpp  test-math.cpp  test-matrix.cpp  test-quaternion.cpp  test-vector.cpp  vector-properties.cpp  vector.cpp
libs/pgl-profile/: CMakeLists.txt
libs/pgl-profile/include/pgl-profile/: debug.hpp
libs/pgl-profile/src/: profile.cpp
libs/pgl-test/: CMakeLists.txt
libs/pgl-test/include/pgl-test/: checker.hpp  function-traits.hpp  function.hpp  generator.hpp  test.hpp  test_suite.hpp
libs/pgl-test/tests/: CMakeLists.txt  basic.cpp  main.cpp  test-checker.cpp
libs/pgl-tools/: CMakeLists.txt
libs/pgl-tools/apps/: logger.cpp
libs/pgl-tools/include/pgl-tools/: ansi.hpp  logger.hpp  profile.hpp
libs/pgl-tools/src/: logger.cpp  profile.cpp
libs/pgl-tools/tests/: CMakeLists.txt  logger.cpp
libs/pgl-ui/include/pgl-ui/: window.hpp
libs/pgl-ui/src/: CMakeLists.txt  window.cpp
libs/profile/include/: profile.hpp
resources/shader/: text.fs  text.vs
src/: CMakeLists.txt  crc.hpp  game-object.cpp  game.cpp  image-loader.cpp  mesh.cpp  model.cpp  particle-generator.cpp  png.hpp  post-processor.cpp  profile.cpp  resource-manager.cpp  shader.cpp  sprite-renderer.cpp  text-renderer.cpp  texture.cpp
tests/: CMakeLists.txt  testgame.cpp  testimage.cpp
